--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "MERN E-commerce Site",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server",
+    "start": "node backend/server.js",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm install build --prefix frontend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm install && npm run build --prefix frontend"
   },
   "author": "Tahseen",
   "license": "ISC",
